# litetube

./: README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
core/: forms.py  urls.py  views.py
core/templates/: result.html  search.html  video.html
litetube/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
static/css/: result.css  search.css  video.css
templates/: base.html
